Added answers to Exercise 4

--- a/Movie-Ratings-Using-Naive-Bayes/Mini_Project_Naive_Bayes.ipynb
+++ b/Movie-Ratings-Using-Naive-Bayes/Mini_Project_Naive_Bayes.ipynb
@@ -1085,6 +1085,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `log-likelihood` as the score means looking for the value of alpha that maximizes the likelihood (Maximum Likelihood Estimation of `alpha` ). We're trying to oprimize `likelihood`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we use an `alpha` that's too large, it will drown out small but important signals and the model's performance will suffer."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
