--- a/Inferential-Statistics/inferential_statistics_1b_Q6_25.ipynb
+++ b/Inferential-Statistics/inferential_statistics_1b_Q6_25.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -145,7 +145,7 @@
        "(1338, 8)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -267,7 +267,7 @@
        "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,43 +298,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12105.484975561605\n"
-     ]
-    }
-   ],
-   "source": [
-    "std = np.std(medical['charges'])\n",
-    "print(std)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13270.422265141257\n"
+      "Mean: 13270.422265141257\n",
+      "Std: 12105.484975561605\n"
      ]
     }
    ],
    "source": [
     "mean = np.mean(medical['charges'])\n",
-    "print(mean)"
+    "std = np.std(medical['charges'])\n",
+    "print('Mean: ' + str(mean))\n",
+    "print('Std: ' + str(std))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -366,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, this is not a normal distribution. it is right skewed."
+    "As we can see, this is not a normal distribution. it is right skewed. Hence it might not be appropriate to use these statistics for the data."
    ]
   },
   {
@@ -386,14 +371,7 @@
     "id": "p__aIR6V2zQM"
    },
    "source": [
-    "__A:__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use the one tail test (central limit theorem/t-test)."
+    "__A:__ The assumption of it being normally distributed fails (since it is right skewed) for a t-test. But since we have a good amount of datapoints, we can approximate this sample mean as the population mean and we can use the one tail test (central limit theorem). "
    ]
   },
   {
@@ -409,49 +387,47 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "3XPCNU9C2zQN"
-   },
-   "source": [
-    "__A:__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "trkUfexF2zQP"
    },
    "source": [
-    "A one sided test is useful here."
+    "__A:__A one sided test is useful here since we only care about it being less than 1200 and aren't concerned about it being over 12000."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "-o-HVl782zQS"
+    "id": "-o-HVl782zQS",
+    "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12725.48718381623"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lower bound of the confidence interval is: 12725.48718381623 \n",
+      "The critical value is: 1.6459941145571317 \n"
+     ]
     }
    ],
    "source": [
     "n = len(medical)\n",
     "df = n-1\n",
     "crit_val = t(df).ppf(0.95)\n",
-    "medical.charges.mean() - crit_val / np.sqrt(n) * medical.charges.std()"
+    "lower = medical.charges.mean() - crit_val / np.sqrt(n) * medical.charges.std()\n",
+    "print(\"The lower bound of the confidence interval is: {} \".format(lower))\n",
+    "print(\"The critical value is: {} \".format(crit_val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__A:__The administrator shouldn't be concerened as we're 95% confident it lies above 12725."
    ]
   },
   {
@@ -484,7 +460,11 @@
     "id": "j2UKzG8H2zQa"
    },
    "source": [
-    "__A:__ The assumption is that the 2 groups have identical standard deviations."
+    "__A:__ <br>\n",
+    "H0 : People with insurance are charged the same.<br>\n",
+    "Ha : People with insurance are charged differently.\n",
+    "<br>\n",
+    "The assumptions are that the 2 groups have equal variance (since standard deviations are approx. equal) and that the data are normally distributed."
    ]
   },
   {
@@ -509,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -526,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -543,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -551,46 +531,40 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11.89329903087671"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-score is: -11.89329903087671\n"
+     ]
     }
    ],
    "source": [
     "sp = np.sqrt((df_i * std_i ** 2 + df_u * std_u ** 2) / (n_i + n_u - 2))\n",
-    "t_score = (mean_i - mean_u) / sp / np.sqrt(1 / n_i + 1 / n_u)\n",
-    "t_score"
+    "t_score = (mean_u - mean_i) / sp / np.sqrt(1 / n_i + 1 / n_u)\n",
+    "print('T-score is: ' + str(t_score))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P value is: 4.461230231620972e-31\n"
+     ]
     }
    ],
    "source": [
-    "p_val = (1 - t(df_i + df_u).cdf(t_score)) * 2\n",
-    "p_val"
+    "p_val = 2*t.cdf(t_score, df = n_u+n_i-2)\n",
+    "print('P value is: ' + str(p_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +573,7 @@
        "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -654,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +637,7 @@
        "Ttest_indResult(statistic=13.298031957975649, pvalue=1.1105103216309125e-37)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +663,7 @@
     "id": "dcbComy52zQt"
    },
    "source": [
-    "__A:__ Z test requires a bigger sample size. T-test provides good results for big sample sizes."
+    "__A:__ The z-score function in scipy can return a test value in the same manner that the t-test can. However, it assumes the true population parameters are known, and it does not account for different  variances or allow comparison of multiple populations. We can say whether a sample is likely to have arisen from our population or not, but it makes different assumptions than the t-test."
    ]
   },
   {
