--- a/Movie-Ratings-Using-Naive-Bayes/Mini_Project_Naive_Bayes.ipynb
+++ b/Movie-Ratings-Using-Naive-Bayes/Mini_Project_Naive_Bayes.ipynb
@@ -1088,14 +1088,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using `log-likelihood` as the score means looking for the value of alpha that maximizes the likelihood (Maximum Likelihood Estimation of `alpha` ). We're trying to oprimize `likelihood`."
+    "The log likelihood function tells us how 'plausible' the model in consideration is, given the data that we have. As a value on it's own, it isn't very helpful, but it allows us to compare models with different parameter values. It's another metric of model fit."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we use an `alpha` that's too large, it will drown out small but important signals and the model's performance will suffer."
+    "If we use an `alpha` that's too large, it will drown out small but important signals and the model's performance will suffer. For example, a large alpha will lower the effect of rare words as compared to a smaller alpha."
    ]
   },
   {
