--- a/Inferential-Statistics/Bayesian_stats_Q6.28/inferential_statistics_3-Q.ipynb
+++ b/Inferential-Statistics/Bayesian_stats_Q6.28/inferential_statistics_3-Q.ipynb
@@ -49,6 +49,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"span5 alert alert-success\">\n",
+    "Solution is here: https://colab.research.google.com/drive/1nuVtWGYEAjqDdSLbfsSaftnDzurVD6Pb#scrollTo=95r2ragpAxeE <br>\n",
+    "Jupyter was having trouble with certain libraries and hence I ran it on Colab.\n",
+    "</div> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -271,15 +281,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"span5 alert alert-success\">\n",
-    "https://github.com/ryanmswan/springboard/blob/master/08_03_Bayesian_stats_Q6.28/inferential_statistics_3-Q.ipynb\n",
-    "https://github.com/jvhuang1786/DSCcareertrack/blob/master/DSC%20Career%20Track/Bayesian_stats_Q6.28/inferential_statistics_3-Qv2.ipynb"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -453,6 +454,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
